--- a/app/views/stories/index.html.erb
+++ b/app/views/stories/index.html.erb
@@ -1,1 +1,115 @@
-Hello World!
+<nav class="navbar navbar-default navbar-fixed-top">
+  <div class="container">
+    <div class="container-fluid">
+      <!-- Brand and toggle get grouped for better mobile display -->
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <a class="navbar-brand" href="#">StoryTime</a>
+      </div>
+
+      <!-- Collect the nav links, forms, and other content for toggling -->
+      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+        <ul class="nav navbar-nav">
+          <li class="active"><a href="#">Top Stories<span class="sr-only">(current)</span></a></li>
+          <li><a href="#">Random Stories</a></li>
+        </ul>
+        <form class="navbar-form navbar-left" role="search">
+          <div class="form-group">
+            <input type="text" class="form-control" placeholder="Search">
+          </div>
+          <button type="submit" class="btn btn-default">Submit</button>
+        </form>
+        <ul class="nav navbar-nav navbar-right">
+          <li><a href="#">Sign in</a></li>
+          <li><a href="#">Sign up</a></li>
+        </ul>
+      </div><!-- /.navbar-collapse -->
+    </div><!-- /.container-fluid -->
+  </div>
+</nav>
+<div class="container">
+  <p>
+    <div class="btn btn-primary">
+      Submit Your Story!
+    </div>
+  </p>
+</div>
+<div class="container">
+  <div class="row">
+    <div class="col-md-8">
+      <div class="well">
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut sit amet venenatis felis. Proin rutrum sagittis libero. Cras commodo at massa id tempus. Quisque pharetra risus sed leo iaculis condimentum. Mauris lorem magna, dapibus eget sodales vitae, sodales sed tellus. Sed blandit nisi a dolor varius, accumsan convallis lorem convallis. Donec et pharetra enim, viverra ultricies elit. Cras dapibus rutrum nisi nec varius. Praesent viverra tortor elit, nec viverra massa aliquam sit amet. Aliquam vel elementum ante.
+        <br>
+        <br>
+        <a href="#" class="btn btn-warning btn-xs">Loved it!</a><span class="text-warning"> (28)</span>
+        <a href="#" class="btn btn-success btn-xs">Hate it!</a><span class="text-success"> (1200)</span>
+        <a href="#" class="btn btn-link btn-xs">Comments</a><small><em>(300)</em></small>
+        <span class="text-muted pull-right">Created by: Ramone on 06/30/2015 at 1:30PM</span>
+      </div>
+      <ul class="pagination pull-right">
+        <li class="disabled"><a href="#">«</a></li>
+        <li class="active"><a href="#">1</a></li>
+        <li><a href="#">2</a></li>
+        <li><a href="#">3</a></li>
+        <li><a href="#">4</a></li>
+        <li><a href="#">5</a></li>
+        <li><a href="#">»</a></li>
+      </ul>
+    </div>
+
+    <div class="col-md-4">
+      <div class="panel panel-default">
+        <div class="panel-heading">Categories</div>
+        <div class="panel-body" style="padding: 0px;">
+          <div class="col-md-6" style="padding: 0px;">
+            <div class="table-responsive" style="border-left: 0;">
+              <table class="table table-striped table-hover table-bordered" style="margin: 0px;">
+                <thead>
+                </thead>
+                <tbody>
+                  <tr>
+                    <td>1</td>
+                  </tr>
+                  <tr>
+                    <td>1</td>
+                  </tr>
+                  <tr>
+                    <td>1</td>
+                  </tr>
+                  <tr>
+                    <td>1</td>
+                  </tr>
+                </tbody>
+              </table> 
+            </div>
+          </div>
+          <div class="col-md-6" style="padding: 0px;">
+            <table class="table table-striped table-hover table-bordered" style="margin: 0px;">
+              <thead>
+              </thead>
+              <tbody>
+                <tr>
+                  <td>1</td>
+                </tr>
+                <tr>
+                  <td>1</td>
+                </tr>
+                <tr>
+                  <td>1</td>
+                </tr>
+                <tr>
+                  <td>1</td>
+                </tr>
+              </tbody>
+            </table> 
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
