Config routes add new.html file added to controller

--- a/app/views/stories/index.html.erb
+++ b/app/views/stories/index.html.erb
@@ -1,8 +1,6 @@
 <div class="container">
   <p>
-    <div class="btn btn-primary">
-      Submit Your Story!
-    </div>
+    <%= link_to "Submit Your Story", new_story_path, class: "btn btn-primary" %>
   </p>
 </div>
 <div class="container">
