--- a/app/views/stories/new.html.erb
+++ b/app/views/stories/new.html.erb
@@ -5,7 +5,7 @@
 			<%= form_for @story do |f| %>
 				<div class="form-group">
 					<%= f.label :body, "Tell use you story" %>
-					<%= f.text_area :body, class: "form-control" %>
+					<%= f.text_area :body, rows: 10, class: "form-control" %>
 				</div>
 				<%= f.submit class: "btn btn-primary" %>
 			<% end %>
