add name params to app controller, add more to stories controller, add name field to devise reg, edit layout and index view pages

--- a/app/views/stories/index.html.erb
+++ b/app/views/stories/index.html.erb
@@ -15,7 +15,7 @@
           <a href="#" class="btn btn-warning btn-xs">Loved it!</a><span class="text-warning"> (28)</span>
           <a href="#" class="btn btn-success btn-xs">Hate it!</a><span class="text-success"> (1200)</span>
           <a href="#" class="btn btn-link btn-xs">Comments</a><small><em>(300)</em></small>
-          <span class="text-muted pull-right">Created by: Ramone on 06/30/2015 at 1:30PM</span>
+          <span class="text-muted pull-right">Created by: <%= story.user.name %> on 06/30/2015 at 1:30PM</span>
         </div>
       <% end %>
       <ul class="pagination pull-right">
