--- a/app/views/stories/index.html.erb
+++ b/app/views/stories/index.html.erb
@@ -12,8 +12,8 @@
           <%= story.body %>
           <br>
           <br>
-          <a href="#" class="btn btn-warning btn-xs">Loved it!</a><span class="text-warning"> (28)</span>
-          <a href="#" class="btn btn-success btn-xs">Hate it!</a><span class="text-success"> (1200)</span>
+          <%= link_to "Loved it", like_story_path(story), method: :put, class: "btn btn-warning btn-xs" %><span class="text-warning"> (<%= story.get_upvotes.size %>)</span>
+           <%= link_to "Hate it", dislike_story_path(story), method: :put, class: "btn btn-warning btn-xs" %><span class="text-warning"> (<%= story.get_downvotes.size %>)</span>
           <a href="#" class="btn btn-link btn-xs">Comments</a><small><em>(300)</em></small>
           <span class="text-muted pull-right"><small>Created by: <%= story.user.name %> on <%= story.created_at.strftime('%B %d, %Y at %l:%M %p') %><small></span>
         </div>
