--- a/app/views/stories/index.html.erb
+++ b/app/views/stories/index.html.erb
@@ -18,16 +18,11 @@
           <span class="text-muted pull-right"><small>Created by: <%= story.user.name %> on <%= story.created_at.strftime('%B %d, %Y at %l:%M %p') %></small></span>
         </div>
       <% end %>
-      <ul class="pagination pull-right">
-        <li class="disabled"><a href="#">«</a></li>
-        <li class="active"><a href="#">1</a></li>
-        <li><a href="#">2</a></li>
-        <li><a href="#">3</a></li>
-        <li><a href="#">4</a></li>
-        <li><a href="#">5</a></li>
-        <li><a href="#">»</a></li>
-      </ul>
+      <div class="container">
+        <%= paginate @stories %>
+      </div>
     </div>
+
     <div class="col-md-4 col-sm-12">
       <div class="panel panel-default">
         <div class="panel-heading text-center">Categories</div>
