--- a/app/views/stories/index.html.erb
+++ b/app/views/stories/index.html.erb
@@ -16,6 +16,8 @@
            <%= link_to "Hate it", dislike_story_path(story), method: :put, class: "btn btn-warning btn-xs" %><span class="text-warning"> (<%= story.get_downvotes.size %>)</span>
           <a href="#" class="btn btn-link btn-xs">Comments</a><small><em>(300)</em></small>
           <span class="text-muted pull-right"><small>Created by: <%= story.user.name %> on <%= story.created_at.strftime('%B %d, %Y at %l:%M %p') %></small></span>
+          <br>
+          <span class="text-muted pull-right"><small>Category: <%=story.category.name %></small></span>
         </div>
       <% end %>
       <div class="container">
