--- a/app/views/stories/new.html.erb
+++ b/app/views/stories/new.html.erb
@@ -7,6 +7,12 @@
 					<%= f.label :body, "Tell use you story" %>
 					<%= f.text_area :body, rows: 10, class: "form-control" %>
 				</div>
+				<div class="form-group">
+		           <div class="form-group">
+		            <%= f.label :category_id %>
+		            <%= f.select(:category_id, Category.all.map {|f| [f.name, f.id]}, {}, {class: "form-control", id: "select"}) %>
+		          </div>
+		        </div>
 				<%= f.submit class: "btn btn-primary" %>
 			<% end %>
 		</div>
