--- a/app/views/stories/search.html.erb
+++ b/app/views/stories/search.html.erb
@@ -1,36 +1,1 @@
-<div class="container">
-  <p>
-  <br>
-    <%= link_to "Submit Your Story", new_story_path, class: "btn btn-primary" %>
-  </p>
-</div>
-<div class="container">
-  <div class="row">
-    <div class="col-md-8">
-      <% @stories.each do |story| %>
-        <div class="well">
-          <%= story.body %>
-          <br>
-          <br>
-          <%= link_to "Loved it", like_story_path(story), method: :put, class: "btn btn-warning btn-xs" %><span class="text-warning"> (<%= story.get_upvotes.size %>)</span>
-           <%= link_to "Hate it", dislike_story_path(story), method: :put, class: "btn btn-warning btn-xs" %><span class="text-warning"> (<%= story.get_downvotes.size %>)</span>
-          <a href="#" class="btn btn-link btn-xs">Comments</a><small><em>(300)</em></small>
-          <span class="text-muted pull-right"><small>Created by: <%= story.user.name %> on <%= story.created_at.strftime('%B %d, %Y at %l:%M %p') %></small></span>
-          <br>
-          <span class="text-muted pull-right"><small>Category: <%=story.category.name %></small></span>
-        </div>
-      <% end %>
-    </div>
-
-    <div class="col-md-4 col-sm-12">
-      <div class="panel panel-default">
-        <div class="panel-heading text-center">Categories</div>
-          <ul class="list-group">
-            <% Category.all.each do |category| %>
-              <li class="list-group-item"><%= link_to category.name, category_path(category) %></li>
-            <% end %>
-          </ul>
-      </div>
-    </div>
-  </div>
-</div>
+<%= render partial: 'layouts/stories_all', stories: @stories %>
