--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -2,7 +2,7 @@
   <div class="col-md-4 col-md-offset-4">
     <div class="login-panel panel panel-default">
       <div class="panel-heading">
-        <h3 class="panel-title">Sign In</h3>
+        <h3 class="panel-title">Sign Up</h3>
       </div>
       <div class="panel-body">
         <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
